--- a/meson.build
+++ b/meson.build
@@ -35,7 +35,6 @@ prefix = get_option('prefix')
 datadir = get_option('datadir')
 bindir = get_option('bindir')
 version = meson.project_version()
-project_name = meson.project_name()
 pkgdatadir = join_paths(prefix, datadir, meson.project_name())
 localedir = join_paths(prefix, get_option('localedir'))
 debug = get_option('buildtype') == 'debug'
@@ -46,7 +45,7 @@ endif
 
 conf = configuration_data()
 conf.set('APPLICATION_ID', application_id)
-conf.set('GETTEXT_PACKAGE', project_name)
+conf.set('GETTEXT_PACKAGE', meson.project_name())
 conf.set('AUTHOR', author)
 conf.set('COPYRIGHT', copyright)
 conf.set('VCS_URL', vcs_url)
@@ -54,13 +53,13 @@ conf.set('ISSUE_URL', issue_url)
 conf.set('HELP_URL', help_url)
 conf.set('LOCALEDIR', localedir)
 conf.set('PKGDATADIR', pkgdatadir)
-conf.set('PROJECT_NAME', project_name)
+conf.set('PROJECT_NAME', meson.project_name())
 conf.set('PYTHON', python.full_path())
 conf.set('HOMEPAGE_URL', homepage_url)
 conf.set('DEBUG', debug)
 
 vala_conf = configuration_data()
-vala_conf.set_quoted('GETTEXT_PACKAGE', project_name)
+vala_conf.set_quoted('GETTEXT_PACKAGE', meson.project_name())
 vala_conf.set_quoted('LOCALEDIR', localedir)
 vala_conf.set_quoted('VERSION', version)
 vala_conf.set_quoted('AUTHOR', author)
@@ -68,7 +67,7 @@ vala_conf.set_quoted('HOMEPAGE_URL', homepage_url)
 vala_conf.set_quoted('ISSUE_URL', issue_url)
 
 add_project_arguments (
-  '-DGETTEXT_PACKAGE="' + meson.project_name () + '"',
+  '-DGETTEXT_PACKAGE="' + meson.project_name() + '"',
   language: 'c'
 )
 
