--- a/po/meson.build
+++ b/po/meson.build
@@ -1,4 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-i18n.gettext(project_name, preset: 'glib')
+i18n.gettext(meson.project_name(),
+  preset: 'glib',
+)
 
 devenv.set('GRAPHS_OVERRIDE_LOCALEDIR', meson.current_build_dir())
