--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -1,11 +1,11 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 configure_file(
-        input: 'graphs.in',
-       output: project_name,
-configuration: conf,
-      install: true,
- install_mode: 'rwxr-xr-x',
-  install_dir: bindir
+          input: 'graphs.in',
+         output: meson.project_name(),
+  configuration: conf,
+        install: true,
+   install_mode: 'rwxr-xr-x',
+    install_dir: bindir,
 )
 
 python.install_sources(
@@ -33,13 +33,17 @@ python.install_sources(
     'ui.py',
     'utilities.py',
   ),
-  subdir: project_name
+  subdir: meson.project_name(),
 )
 
-configure_file (output: 'config.h', configuration: vala_conf)
-config_dep = valac.find_library ('config', dirs: meson.project_source_root () / 'graphs')
-graphs_lib = shared_library(
-  'graphs',
+configure_file(
+         output: 'config.h',
+  configuration: vala_conf
+)
+config_dep = valac.find_library('config',
+  dirs: meson.project_source_root () / 'graphs'
+)
+graphs_lib = shared_library('graphs',
   files(
     'about.vala',
     'actions.vala',
@@ -61,18 +65,19 @@ graphs_lib = shared_library(
     'utilities.vala',
     'window.vala',
   ), blueprints_hack, previews_hack, gresource_bundle,
-           vala_gir: 'Graphs-1.gir',
-       dependencies: dependencies + config_dep,
-include_directories: include_directories('.'),
-         link_args : ['-lm',],
-            install: true,
-        install_dir: [true],
+             vala_gir: 'Graphs-1.gir',
+         dependencies: dependencies + config_dep,
+  include_directories: include_directories('.'),
+            link_args: ['-lm',],
+              install: true,
+          install_dir: [true],
 )
 
 custom_target('graphs typelib',
-       command: [find_program('g-ir-compiler'), '--shared-library', 'libgraphs.so', '--output', '@OUTPUT@', meson.current_build_dir() / 'Graphs-1.gir'],
-        output: 'Graphs-1.typelib',
-       depends: graphs_lib,
-       install: true,
-   install_dir: get_option('libdir') / 'girepository-1.0')
+      command: [find_program('g-ir-compiler'), '--shared-library', 'libgraphs.so', '--output', '@OUTPUT@', meson.current_build_dir() / 'Graphs-1.gir'],
+       output: 'Graphs-1.typelib',
+      depends: graphs_lib,
+      install: true,
+  install_dir: get_option('libdir') / 'girepository-1.0',
+ )
 devenv.set('GI_TYPELIB_PATH', meson.current_build_dir())
