--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -28,6 +28,7 @@ python.install_sources(
     'operations.py',
     'parse_file.py',
     'project.py',
+    'python_helper.py',
     'scales.py',
     'style_io.py',
     'styles.py',
@@ -59,6 +60,7 @@ graphs_lib = shared_library('graphs',
     'inline-stack-switcher.vala',
     'item_box.vala',
     'misc.vala',
+    'python_helper.vala',
     'smoothen_settings.vala',
     'styles.vala',
     'transform.vala',
