--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-data/se.sjoerd.Graphs.appdata.xml.in.in
-data/se.sjoerd.Graphs.desktop.in.in
+data/se.sjoerd.Graphs.appdata.xml.in
+data/se.sjoerd.Graphs.desktop.in
 data/se.sjoerd.Graphs.gschema.xml
 data/ui/add-equation.blp
 data/ui/add-style.blp
