--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -17,20 +17,20 @@ python.install_sources(
     'curve_fitting.py',
     'data.py',
     'edit_item.py',
+    'export_data.py',
     'figure_settings.py',
     'file_import.py',
     'file_io.py',
     'item.py',
-    'item_box.py',
     'migrate.py',
     'misc.py',
     'operations.py',
     'parse_file.py',
     'project.py',
+    'python_helper.py',
     'scales.py',
     'style_io.py',
     'styles.py',
-    'ui.py',
     'utilities.py',
   ),
   subdir: meson.project_name(),
@@ -59,6 +59,7 @@ graphs_lib = shared_library('graphs',
     'inline-stack-switcher.vala',
     'item_box.vala',
     'misc.vala',
+    'python_helper.vala',
     'smoothen_settings.vala',
     'styles.vala',
     'transform.vala',
