move project save logic to vala
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -58,6 +58,7 @@ graphs_lib = shared_library('graphs',
     'inline-stack-switcher.vala',
     'item_box.vala',
     'misc.vala',
+    'project.vala',
     'python_helper.vala',
     'smoothen_settings.vala',
     'styles.vala',
