--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -1,11 +1,11 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 configure_file(
-          input: 'graphs.in',
-         output: meson.project_name(),
-  configuration: conf,
-        install: true,
-   install_mode: 'rwxr-xr-x',
-    install_dir: bindir,
+        input: 'graphs.in',
+       output: project_name,
+configuration: conf,
+      install: true,
+ install_mode: 'rwxr-xr-x',
+  install_dir: bindir
 )
 
 python.install_sources(
@@ -17,32 +17,27 @@ python.install_sources(
     'curve_fitting.py',
     'data.py',
     'edit_item.py',
-    'export_data.py',
     'figure_settings.py',
     'file_import.py',
     'file_io.py',
     'item.py',
+    'item_box.py',
     'migrate.py',
     'misc.py',
     'operations.py',
     'parse_file.py',
     'project.py',
-    'python_helper.py',
     'scales.py',
     'style_io.py',
     'styles.py',
+    'ui.py',
     'utilities.py',
   ),
-  subdir: meson.project_name(),
+  subdir: project_name
 )
 
-configure_file(
-         output: 'config.h',
-  configuration: vala_conf
-)
-config_dep = valac.find_library('config',
-  dirs: meson.project_source_root () / 'graphs'
-)
+configure_file (output: 'config.h', configuration: vala_conf)
+config_dep = valac.find_library ('config', dirs: meson.project_source_root () / 'graphs')
 graphs_lib = shared_library('graphs',
   files(
     'about.vala',
@@ -58,8 +53,6 @@ graphs_lib = shared_library('graphs',
     'inline-stack-switcher.vala',
     'item_box.vala',
     'misc.vala',
-    'project.vala',
-    'python_helper.vala',
     'smoothen_settings.vala',
     'styles.vala',
     'transform.vala',
@@ -74,11 +67,12 @@ graphs_lib = shared_library('graphs',
           install_dir: [true],
 )
 
+
+
 custom_target('graphs typelib',
-      command: [find_program('g-ir-compiler'), '--shared-library', 'libgraphs.so', '--output', '@OUTPUT@', meson.current_build_dir() / 'Graphs-1.gir'],
-       output: 'Graphs-1.typelib',
-      depends: graphs_lib,
-      install: true,
-  install_dir: get_option('libdir') / 'girepository-1.0',
- )
+       command: [find_program('g-ir-compiler'), '--shared-library', 'libgraphs.so', '--output', '@OUTPUT@', meson.current_build_dir() / 'Graphs-1.gir'],
+        output: 'Graphs-1.typelib',
+       depends: graphs_lib,
+       install: true,
+   install_dir: get_option('libdir') / 'girepository-1.0')
 devenv.set('GI_TYPELIB_PATH', meson.current_build_dir())
