--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -4,7 +4,6 @@ adopt-info: graphs
 grade: stable 
 confinement: strict
 compression: lzo
-license: GPL-3.0
 platforms:
   amd64:
   arm64:
@@ -16,15 +15,12 @@ slots:
     name: se.sjoerd.Graphs
 
 parts:
-  numpy:
-    source: https://github.com/numpy/numpy.git
-    source-tag: 'v1.25.2'
+  python-deps:
+    source: .
     plugin: python
-    build-environment:
-      - PATH: ${CRAFT_PART_INSTALL}/bin:${PATH}
-      - PYTHONPATH: ""
     python-packages:
       - scipy==1.11.2
+      - numpy==1.25.2
       - python-dateutil==2.8.2
       - pyparsing==3.0.9
       - Pillow==10.0.0
@@ -38,27 +34,21 @@ parts:
       - mpmath==1.3.0
       - sympy==1.12
     prime:
-      - -usr/bin/activate
-      - -usr/bin/activate.csh
-      - -usr/bin/activate.fish
+      - -usr/bin/activate*
       - -usr/bin/Activate.ps1
-      - -usr/bin/python
-      - -usr/bin/python3
-      - -usr/bin/python3.10
-      - -usr/bin/pip
-      - -usr/bin/pip3
-      - -usr/bin/pip3.10
+      - -usr/bin/python*
+      - -usr/bin/pip*
       - -pyvenv.cfg
       - -share
       - -include
       - -lib
       - -lib64
-      - -usr/lib/python3/dist-packages/pip*
-      - -usr/lib/python3/dist-packages/setuptools*
-      - -usr/lib/python3/dist-packages/pkg_resources*
+      - -usr/lib/*/dist-packages/pip*
+      - -usr/lib/*/dist-packages/setuptools*
+      - -usr/lib/*/dist-packages/pkg_resources*
     organize: 
       bin: usr/bin
-      lib/python3.10/site-packages: usr/lib/python3/dist-packages
+      lib/python3.12/site-packages: usr/lib/python3/dist-packages
       
   graphs:
     after: [ numpy ]
@@ -69,21 +59,13 @@ parts:
       - --buildtype=release
     build-environment:
       - PYTHONPATH: $CRAFT_STAGE/usr/lib/python3/dist-packages:$PYTHONPATH
-      - GI_TYPELIB_PATH: /snap/gnome-46-2404-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET/girepository-1.0:/snap/gnome-46-2404-sdk/current/usr/lib/girepository-1.0
     build-snaps:
-      - blueprint-compiler/latest/stable
-      - gnome-46-2404-sdk/latest/edge
-      - gnome-46-2404/latest/edge      
+      - blueprint-compiler/latest/edge 
     override-build: |
       craftctl default
       sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/graphs/current/usr/bin/graphs
-      mkdir -p $CRAFT_PART_INSTALL/meta/gui
-      cp -r $CRAFT_PART_INSTALL/snap/graphs/current/usr/share/icons $CRAFT_PART_INSTALL/meta/gui/
-      for i in `find $CRAFT_PART_INSTALL/meta/gui/icons -name "*.svg" -o -name "*.png"`; do
-        mv $i "`dirname $i`/snap.$CRAFT_PROJECT_NAME.`basename $i`"
-      done
     organize:
-      snap/graphs/current/usr: usr
+      snap/graphs/current: .
     parse-info: [usr/share/appdata/se.sjoerd.Graphs.appdata.xml]
     
     
