copy gresource files to build dir
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -161,7 +161,7 @@ other = files(
 )
 
 gresource = custom_target('gresource',
-    input: [blueprints, styles, other],
+    input: [blueprints, styles, icons, other],
    output: application_id + '.gresource.xml',
   depends: blueprints,
   command: [
