--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ include:
   - project: "GNOME/citemplates"
     file: "flatpak/flatpak_ci_initiative.yml"
 
-.vars:
+.flatpak-vars:
   image: quay.io/gnome_infrastructure/gnome-runtime-images:gnome-46
   variables:
     MANIFEST_PATH: se.sjoerd.Graphs.json
@@ -18,14 +18,26 @@ flatpak@x86_64:
   stage: build
   extends:
     - .flatpak@x86_64
-    - .vars
+    - .flatpak-vars
 
 # Build Flatpak for aarch64
 flatpak@aarch64:
   stage: build
   extends:
     - .flatpak@aarch64
-    - .vars
+    - .flatpak-vars
+
+snap:
+  stage: build
+  image: snapcore/snapcraft
+  script:
+    - snapcraft --version
+    - snapcraft
+    - ls -la
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - "*.snap"
 
 python-lint:
   image: python:3.11.1
