--- a/data/se.sjoerd.Graphs.appdata.xml.in
+++ b/data/se.sjoerd.Graphs.appdata.xml.in
@@ -33,23 +33,23 @@
   <url type="translate">https://l10n.gnome.org/module/Graphs/</url>
   <screenshots>
     <screenshot type="default">
-      <caption>1 - Plot and manipulate any data of choice</caption>
+      <caption>Plot and manipulate any data</caption>
       <image>https://gitlab.gnome.org/World/Graphs/-/raw/main/data/screenshots/sin_cos.png</image>
     </screenshot>
     <screenshot type="default">
-      <caption>2 - Full support for light and dark mode</caption>
+      <caption>Full support for light and dark mode</caption>
       <image>https://gitlab.gnome.org/World/Graphs/-/raw/main/data/screenshots/sin_cos_dark.png</image>
     </screenshot>
     <screenshot type="default">
-      <caption>3 - Generate data from an equation</caption>
+      <caption>Generate data from an equation</caption>
       <image>https://gitlab.gnome.org/World/Graphs/-/raw/main/data/screenshots/add_equation.png</image>
     </screenshot>
     <screenshot type="default">
-      <caption>4 - Edit plot stylesheets</caption>
+      <caption>Manage plot stylesheets</caption>
       <image>https://gitlab.gnome.org/World/Graphs/-/raw/main/data/screenshots/previews.png</image>
     </screenshot>
     <screenshot>
-      <caption>5 - Manipulate imported data with ease</caption>
+      <caption>Manipulate imported data</caption>
       <image>https://gitlab.gnome.org/World/Graphs/-/raw/main/data/screenshots/curve_fitting.png</image>
     </screenshot>
   </screenshots>
