--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -52,6 +52,7 @@ graphs/parse_file.py
 graphs/project.py
 graphs/scales.py
 graphs/smoothen_settings.vala
+graphs/style_editor.py
 graphs/style_io.py
 graphs/styles.py
 graphs/styles.vala
