Don't register a separate application for style editing
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,25 +1,12 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
-graphs_desktop_file_in = configure_file(
+desktop_file_in = configure_file(
           input: application_id + '.desktop.in',
          output: application_id + '.desktop.in',
   configuration: conf,
 )
-graphs_desktop_file = i18n.merge_file(
-        input: graphs_desktop_file_in,
+desktop_file = i18n.merge_file(
+        input: desktop_file_in,
        output: application_id + '.desktop',
-         type: 'desktop',
-       po_dir: '../po',
-      install: true,
-  install_dir: join_paths(datadir, 'applications'),
-)
-graphs_style_editor_desktop_file_in = configure_file(
-          input: application_id + 'StyleEditor.desktop.in',
-         output: application_id + 'StyleEditor.desktop.in',
-  configuration: conf,
-)
-graphs_style_editor_desktop_file = i18n.merge_file(
-        input: graphs_style_editor_desktop_file_in,
-       output: application_id + 'StyleEditor.desktop',
          type: 'desktop',
        po_dir: '../po',
       install: true,
@@ -29,10 +16,7 @@ graphs_style_editor_desktop_file = i18n.merge_file(
 desktop_file_validate = find_program('desktop-file-validate', required: false)
 if desktop_file_validate.found()
   test('Validate graphs desktop file', desktop_file_validate,
-    args: [graphs_desktop_file.full_path()],
-  )
-  test('Validate graphs style editor desktop file', desktop_file_validate,
-    args: [graphs_style_editor_desktop_file.full_path()],
+    args: [desktop_file.full_path()],
   )
 endif
 
