refactor export items logic
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -17,7 +17,7 @@ python.install_sources(
     'curve_fitting.py',
     'data.py',
     'edit_item.py',
-    'export_data.py',
+    'export_items.py',
     'figure_settings.py',
     'file_import.py',
     'file_io.py',
@@ -53,6 +53,7 @@ graphs_lib = shared_library('graphs',
     'curve_fitting.vala',
     'data.vala',
     'export_figure.vala',
+    'export_items.vala',
     'figure_settings.vala',
     'file_import.vala',
     'item.vala',
