set NUMEXPR_MAX_THREADS environment variable
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/build-aux/snap/snapcraft.yaml
+++ b/build-aux/snap/snapcraft.yaml
@@ -66,4 +66,5 @@ apps:
     environment:
       PYTHONPATH: $SNAP/usr/lib/python3/dist-packages:$PYTHONPATH
       GI_TYPELIB_PATH: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/girepository-1.0:$GI_TYPELIB_PATH
+      NUMEXPR_MAX_THREADS: 16
     extensions: [gnome]      
