Allow multiple instances of Graphs

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -31,6 +31,7 @@ python.install_sources(
     'style_io.py',
     'styles.py',
     'utilities.py',
+    'window.py',
   ),
   subdir: meson.project_name(),
 )
@@ -44,7 +45,7 @@ config_dep = valac.find_library('config',
 )
 graphs_lib = shared_library('graphs',
   files(
-    'about.vala',
+    'actions.vala',
     'add_equation.vala',
     'application.vala',
     'canvas.vala',
