--- a/data/meson.build
+++ b/data/meson.build
@@ -77,7 +77,7 @@ blueprint_files = [
   'ui/shortcuts.blp',
   'ui/smoothen-settings.blp',
   'ui/style-color-box.blp',
-  'ui/style-editor.blp',
+  'ui/style-editor-box.blp',
   'ui/style-editor-window.blp',
   'ui/style-preview.blp',
   'ui/transform.blp',
