initial vala port
Signed-off-by: Christoph Matthias Kohnen <christoph.kohnen@disroot.org>

--- a/graphs/meson.build
+++ b/graphs/meson.build
@@ -62,6 +62,7 @@ graphs_lib = shared_library('graphs',
     'project.vala',
     'python_helper.vala',
     'smoothen_settings.vala',
+    'style_editor.vala',
     'styles.vala',
     'transform.vala',
     'utilities.vala',
