build: Install metainfo file to correct location
Appdata files used to be installed to /usr/share/appdata. However, this location has been changed to /usr/share/metainfo in recent versions of the AppStream specification.

--- a/data/meson.build
+++ b/data/meson.build
@@ -30,7 +30,7 @@ appstream_file = i18n.merge_file(
        output: application_id + '.appdata.xml',
        po_dir: '../po',
       install: true,
-  install_dir: join_paths(datadir, 'appdata'),
+  install_dir: join_paths(datadir, 'metainfo'),
 )
 
 # Validate Appdata
